--- a/index.html
+++ b/index.html
@@ -44,6 +44,11 @@
             <td class="lesson-item"><a href="./lesson6.html" class="lesson-item-link">Урок 6</a></td>
             <td class="lesson-theme">GitHub Pages</td>
         </tr>
+        <tr class="nums">
+            <td class="lessons-nums">7</td>
+            <td class="lesson-item"><a href="./lesson7.html" class="lesson-item-link">Урок 7</a></td>
+            <td class="lesson-theme">Підготовка проєкту HTML</td>
+        </tr>
     </table>
     <img src="./img1.jpg" width="300px" class="my-photo"/>
 </body>
